--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
 	<title>Resume Design</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<script src="https://kit.fontawesome.com/6389024cd4.js" crossorigin="anonymous"></script>
+	<script src="fontawesome.min.js"></script>
 </head>
 <body>
-
 	<div class="wrapper">
 		<div class="resume_design">
 			<div class="resume_left">
@@ -20,8 +19,6 @@
 							<p>Actively seeking position with opportunity for growth and willing to broaden my knowledge to be a professional developer to contribute to software development by advanced and best technology in the future</p>
 						</li>
 					</ul>
-					
-					
 				</div>
 				<div class="exp_sec">
 					<div class="button">Experience</div>
