Chage bg color of left section

--- a/index.html
+++ b/index.html
@@ -1,157 +1,162 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Resume Design</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	<script src="fontawesome.min.js"></script>
+    <title>Resume Design</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="fontawesome.min.js"></script>
 </head>
+
 <body>
-	<div class="wrapper">
-		<div class="resume_design">
-			<div class="resume_left">
-				<div class="about_sec">
-					<div class="button">About Me</div><br>
-					<ul>
-						<li>
-							<p>As an enthusiastic person, I want to learn more technical knowledge to improve my skills.</p>
-						</li>
-						<li>
-							<p>Actively seeking position with opportunity for growth and willing to broaden my knowledge to be a professional developer to contribute to software development by advanced and best technology in the future</p>
-						</li>
-					</ul>
-				</div>
-				<div class="exp_sec">
-					<div class="button">Experience</div>
-					<ul>
-						<li>
-							<div class="item">
-								<div class="item_grp">
-									<p class="title">Software Engineer</p>
-									<p class="sub_title"><i>Optimizely Vietnam, Ha Noi</i></p>
-									<span class="timeline">Nov 2021 - Present</span>
-								</div>
-								<p class="content">- Maintain and develop various addons of Episerver framework.</p>
-								<p class="content">- Convert and maintain various projects from .Net framework to .Net core.</p>
-							</div>
-						</li>
-						<li>
-							<div class="item">
-								<div class="item_grp">
-									<p class="title">Solutions Architect</p>
-									<p class="sub_title"><i>Episerver Vietnam, Ha Noi</i></p>
-									<span class="timeline">Jan 2021 - Oct 2021</span>
-								</div>
-								<p class="content">- Convert and maintain various projects from .Net framework to .Net core.</p>
-								<p class="content">- Maintain and develop an Episerver framework sample site for Sales team.</p>
-							</div>
-						</li>
-						<li>
-							<div class="item">
-								<div class="item_grp">
-									<p class="title">Sofware Developer</p>
-									<p class="sub_title"><i>House3d Vietnam, Ha Noi</i></p>
-									<span class="timeline">Apr 2018 - Jan 2020</span>
-								</div>
-								<p class="content">- Maintain and develop company's yii2 website for managing products.<p>
-								<p class="content">- Write migration, export and import scripts for company's projects.<p></p>
-							</div>
-						</li>
-					</ul>
-				</div>
-				<div class="edu_sec">
-					<div class="button">Education</div>
-					<ul>
-						<li>
-							<div class="item">
-								<div class="item_grp">
-									<p class="title">Bachelor in Computer Sciences</p>
-									<p class="sub_title"><i>VNU University of Science - HUS</i></p>
-									<p>Sep 2017 - Jun 2020</p>
-								</div>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<div class="resume_right">
-				<div class="profile_sec">
-					<div class="img_holder">
-					</div>
-					<div class="profile_info">
-						<p class="first_name">Nguyen</p>
-						<p class="last_name">Quoc Anh</p>
-						<p class="role">Sofware Engineer</p>
-					</div>
-				</div>
-				<div class="contact_sec">
-					<div class="button">Contacts</div>
-					<ul>
-						<li class="item">
-							<div class="icon">
-								<i class="fas fa-phone"></i>
-							</div>
-							<div class="content">
-								<p class="subtitle">0353999898</p>
-							</div>
-						</li>
-						<li class="item">
-							<div class="icon">
-								<i class="fas fa-envelope"></i>
-							</div>
-							<div class="content">
-								<p class="subtitle">quocanhnguyen507@gmail.com</p>
-							</div>
-						</li>
-						<li class="item">
-							<div class="icon">
-								<i class="fa-brands fa-linkedin"></i>
-							</div>
-							<div class="content">
-								<a class="subtitle" href="https://www.linkedin.com/in/quoc-anh-nguyen-718862172/">quoc-anh-nguyen-718862172</a>
-							</div>
-						</li>
-						<li class="item">
-							<div class="icon">
-								<i class="fa-brands fa-github"></i>
-							</div>
-							<div class="content">
-								<a class="subtitle" href="https://github.com/quocanhnguyen402">quocanhnguyen402</a>
-							</div>
-						</li>
-					</ul>
-				</div>
-				<div class="skills_sec">
-					<div class="button">Skills</div>
-					<h3>Progamming Languages</h3><br>
-					<ul>
-						<li><i class="fa-solid fa-circle"></i>&nbsp;C#</li>
-						<li><i class="fa-solid fa-circle"></i>&nbsp;Javascript</li>
-						<li><i class="fa-solid fa-circle"></i>&nbsp;Java</li>
-						<li><i class="fa-solid fa-circle"></i>&nbsp;Php</li>
-						<li><i class="fa-solid fa-circle"></i>&nbsp;Python</li>
-					</ul>
-					<br>
-					<h3>Frameworks & Technologies</h3><br>
-					<ul>
-						<li><i class="fa-solid fa-circle"></i>&nbsp;.Net MVC Framework</li>
-						<li><i class="fa-solid fa-circle"></i>&nbsp;Yii2 Framework</li>
-						<li><i class="fa-solid fa-circle"></i>&nbsp;Laravel Framework</li>
-						<li><i class="fa-solid fa-circle"></i>&nbsp;Optimizely Framework</li>
-						<li><i class="fa-solid fa-circle"></i>&nbsp;MySQL and SQL Server</li>
-						<li><i class="fa-solid fa-circle"></i>&nbsp;Linux</li>
-					</ul>
-					<br>
-					<h3>Soft Skils</h3><br>
-					<ul>
-						<li><i class="fa-solid fa-circle"></i>&nbsp;Communication</li>
-						<li><i class="fa-solid fa-circle"></i>&nbsp;Teamwork</li>
-						<li><i class="fa-solid fa-circle"></i>&nbsp;Adaptability</li>
-						<li><i class="fa-solid fa-circle"></i>&nbsp;Fluent in English</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="wrapper">
+        <div class="resume_design">
+            <div class="resume_left">
+                <div class="about_sec">
+                    <div class="button">About Me</div><br>
+                    <ul>
+                        <li>
+                            <p>As an enthusiastic person, I want to learn more technical knowledge to improve my skills.</p>
+                        </li>
+                        <li>
+                            <p>Actively seeking position with opportunity for growth and willing to broaden my knowledge to be a professional developer to contribute to software development by advanced and best technology in the future</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="exp_sec">
+                    <div class="button">Experience</div>
+                    <ul>
+                        <li>
+                            <div class="item">
+                                <div class="item_grp">
+                                    <p class="title">Software Engineer</p>
+                                    <p class="sub_title"><i>Optimizely Vietnam, Ha Noi</i></p>
+                                    <span class="timeline">Nov 2021 - Present</span>
+                                </div>
+                                <p class="content">- Maintain and develop various addons of Episerver framework.</p>
+                                <p class="content">- Convert and maintain various projects from .Net framework to .Net core.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="item">
+                                <div class="item_grp">
+                                    <p class="title">Solutions Architect</p>
+                                    <p class="sub_title"><i>Episerver Vietnam, Ha Noi</i></p>
+                                    <span class="timeline">Jan 2021 - Oct 2021</span>
+                                </div>
+                                <p class="content">- Convert and maintain various projects from .Net framework to .Net core.</p>
+                                <p class="content">- Maintain and develop an Episerver framework sample site for Sales team.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="item">
+                                <div class="item_grp">
+                                    <p class="title">Sofware Developer</p>
+                                    <p class="sub_title"><i>House3d Vietnam, Ha Noi</i></p>
+                                    <span class="timeline">Apr 2018 - Jan 2020</span>
+                                </div>
+                                <p class="content">- Maintain and develop company's yii2 website for managing products.
+                                    <p>
+                                        <p class="content">- Write migration, export and import scripts for company's projects.
+                                            <p></p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="edu_sec">
+                    <div class="button">Education</div>
+                    <ul>
+                        <li>
+                            <div class="item">
+                                <div class="item_grp">
+                                    <p class="title">Bachelor in Computer Sciences</p>
+                                    <p class="sub_title"><i>VNU University of Science - HUS</i></p>
+                                    <p>Sep 2017 - Jun 2020</p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="resume_right">
+                <div class="profile_sec">
+                    <div class="img_holder">
+                    </div>
+                    <div class="profile_info">
+                        <p class="first_name">Nguyen</p>
+                        <p class="last_name">Quoc Anh</p>
+                        <p class="role">Sofware Engineer</p>
+                    </div>
+                </div>
+                <div class="contact_sec">
+                    <div class="button">Contacts</div>
+                    <ul>
+                        <li class="item">
+                            <div class="icon">
+                                <i class="fas fa-phone"></i>
+                            </div>
+                            <div class="content">
+                                <p class="subtitle">0353999898</p>
+                            </div>
+                        </li>
+                        <li class="item">
+                            <div class="icon">
+                                <i class="fas fa-envelope"></i>
+                            </div>
+                            <div class="content">
+                                <p class="subtitle">quocanhnguyen507@gmail.com</p>
+                            </div>
+                        </li>
+                        <li class="item">
+                            <div class="icon">
+                                <i class="fa-brands fa-linkedin"></i>
+                            </div>
+                            <div class="content">
+                                <a class="subtitle" href="https://www.linkedin.com/in/quoc-anh-nguyen-718862172/">quoc-anh-nguyen-718862172</a>
+                            </div>
+                        </li>
+                        <li class="item">
+                            <div class="icon">
+                                <i class="fa-brands fa-github"></i>
+                            </div>
+                            <div class="content">
+                                <a class="subtitle" href="https://github.com/quocanhnguyen402">quocanhnguyen402</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="skills_sec">
+                    <div class="button">Skills</div>
+                    <h3>Progamming Languages</h3><br>
+                    <ul>
+                        <li><i class="fa-solid fa-circle"></i>&nbsp;C#</li>
+                        <li><i class="fa-solid fa-circle"></i>&nbsp;Javascript</li>
+                        <li><i class="fa-solid fa-circle"></i>&nbsp;Java</li>
+                        <li><i class="fa-solid fa-circle"></i>&nbsp;Php</li>
+                        <li><i class="fa-solid fa-circle"></i>&nbsp;Python</li>
+                    </ul>
+                    <br>
+                    <h3>Frameworks & Technologies</h3><br>
+                    <ul>
+                        <li><i class="fa-solid fa-circle"></i>&nbsp;.Net MVC Framework</li>
+                        <li><i class="fa-solid fa-circle"></i>&nbsp;Yii2 Framework</li>
+                        <li><i class="fa-solid fa-circle"></i>&nbsp;Laravel Framework</li>
+                        <li><i class="fa-solid fa-circle"></i>&nbsp;Optimizely Framework</li>
+                        <li><i class="fa-solid fa-circle"></i>&nbsp;MySQL and SQL Server</li>
+                        <li><i class="fa-solid fa-circle"></i>&nbsp;Linux</li>
+                    </ul>
+                    <br>
+                    <h3>Soft Skils</h3><br>
+                    <ul>
+                        <li><i class="fa-solid fa-circle"></i>&nbsp;Fluent in English</li>
+                        <li><i class="fa-solid fa-circle"></i>&nbsp;Communication</li>
+                        <li><i class="fa-solid fa-circle"></i>&nbsp;Teamwork</li>
+                        <li><i class="fa-solid fa-circle"></i>&nbsp;Adaptability</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
+
 </html>
