Update full-time and part-time in work section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <div class="item">
                                 <div class="item_grp">
                                     <p class="title">Software Engineer</p>
-                                    <p class="sub_title"><i>Optimizely Vietnam, Ha Noi</i></p>
+                                    <p class="sub_title"><i>Full-time, Optimizely Vietnam, Ha Noi</i></p>
                                     <span class="timeline">Nov 2021 - Present</span>
                                 </div>
                                 <p class="content">- Maintain and develop various addons of Episerver framework.</p>
@@ -40,7 +40,7 @@
                             <div class="item">
                                 <div class="item_grp">
                                     <p class="title">Solutions Architect</p>
-                                    <p class="sub_title"><i>Episerver Vietnam, Ha Noi</i></p>
+                                    <p class="sub_title"><i>Full-time, Episerver Vietnam, Ha Noi</i></p>
                                     <span class="timeline">Jan 2021 - Oct 2021</span>
                                 </div>
                                 <p class="content">- Convert and maintain various projects from .Net framework to .Net core.</p>
@@ -51,7 +51,7 @@
                             <div class="item">
                                 <div class="item_grp">
                                     <p class="title">Sofware Developer</p>
-                                    <p class="sub_title"><i>House3d Vietnam, Ha Noi</i></p>
+                                    <p class="sub_title"><i>Part-time, House3d Vietnam, Ha Noi</i></p>
                                     <span class="timeline">Apr 2018 - Jan 2020</span>
                                 </div>
                                 <p class="content">- Maintain and develop company's yii2 website for managing products.
