Change name and list bullets

--- a/index.html
+++ b/index.html
@@ -128,29 +128,29 @@
                     <div class="button">Skills</div>
                     <h3>Progamming Languages</h3><br>
                     <ul>
-                        <li><i class="fa-solid fa-circle"></i>&nbsp;C#</li>
-                        <li><i class="fa-solid fa-circle"></i>&nbsp;Javascript</li>
-                        <li><i class="fa-solid fa-circle"></i>&nbsp;Java</li>
-                        <li><i class="fa-solid fa-circle"></i>&nbsp;Php</li>
-                        <li><i class="fa-solid fa-circle"></i>&nbsp;Python</li>
+                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;C#</li>
+                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Javascript</li>
+                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Java</li>
+                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Php</li>
+                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Python</li>
                     </ul>
                     <br>
                     <h3>Frameworks & Technologies</h3><br>
                     <ul>
-                        <li><i class="fa-solid fa-circle"></i>&nbsp;.Net MVC Framework</li>
-                        <li><i class="fa-solid fa-circle"></i>&nbsp;Yii2 Framework</li>
-                        <li><i class="fa-solid fa-circle"></i>&nbsp;Laravel Framework</li>
-                        <li><i class="fa-solid fa-circle"></i>&nbsp;Optimizely Framework</li>
-                        <li><i class="fa-solid fa-circle"></i>&nbsp;MySQL and SQL Server</li>
-                        <li><i class="fa-solid fa-circle"></i>&nbsp;Linux</li>
+                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;.Net MVC</li>
+                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Yii2</li>
+                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Laravel</li>
+                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Optimizely</li>
+                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;MySQL and SQL Server</li>
+                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Linux</li>
                     </ul>
                     <br>
                     <h3>Soft Skils</h3><br>
                     <ul>
-                        <li><i class="fa-solid fa-circle"></i>&nbsp;Fluent in English</li>
-                        <li><i class="fa-solid fa-circle"></i>&nbsp;Communication</li>
-                        <li><i class="fa-solid fa-circle"></i>&nbsp;Teamwork</li>
-                        <li><i class="fa-solid fa-circle"></i>&nbsp;Adaptability</li>
+                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Fluent in English</li>
+                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Communication</li>
+                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Teamwork</li>
+                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Adaptability</li>
                     </ul>
                 </div>
             </div>
