--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Resume Design</title>
+    <title>Nguyen Quoc Anh - Resume</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="fontawesome.min.js"></script>
 </head>
@@ -32,8 +32,9 @@
                                     <p class="sub_title"><i>Full-time, Optimizely Vietnam, Ha Noi</i></p>
                                     <span class="timeline">Nov 2021 - Present</span>
                                 </div>
-                                <p class="content">- Maintain and develop various addons of Episerver framework.</p>
-                                <p class="content">- Convert and maintain various projects from .Net framework to .Net core.</p>
+                                <p class="content">- Convert various projects from dotnet framework to netcore.</p>
+                                <p class="content">- Convert admins view from ASPX to React.</p>
+                                <p class="content">- Maintain and develop various addons of Optimizely framework.</p>
                             </div>
                         </li>
                         <li>
@@ -43,7 +44,7 @@
                                     <p class="sub_title"><i>Full-time, Episerver Vietnam, Ha Noi</i></p>
                                     <span class="timeline">Jan 2021 - Oct 2021</span>
                                 </div>
-                                <p class="content">- Convert and maintain various projects from .Net framework to .Net core.</p>
+                                <p class="content">- Convert various projects from dotnet framework to netcore.</p>
                                 <p class="content">- Maintain and develop an Episerver framework sample site for Sales team.</p>
                             </div>
                         </li>
@@ -54,10 +55,8 @@
                                     <p class="sub_title"><i>Part-time, House3d Vietnam, Ha Noi</i></p>
                                     <span class="timeline">Apr 2018 - Jan 2020</span>
                                 </div>
-                                <p class="content">- Maintain and develop company's yii2 website for managing products.
-                                    <p>
-                                        <p class="content">- Write migration, export and import scripts for company's projects.
-                                            <p></p>
+                                <p class="content">- Maintain and develop various yii2 projects.</p>
+                                <p class="content">- Write import/export products' info from/into excel and migration scripts.</p>
                             </div>
                         </li>
                     </ul>
@@ -69,8 +68,17 @@
                             <div class="item">
                                 <div class="item_grp">
                                     <p class="title">Bachelor in Computer Sciences</p>
-                                    <p class="sub_title"><i>VNU University of Science - HUS</i></p>
+                                    <p class="sub_title"><i>VNU University of Science (HUS)</i></p>
                                     <p>Sep 2017 - Jun 2020</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="item">
+                                <div class="item_grp">
+                                    <p class="title">Certificate Awarded</p>
+                                    <p class="sub_title"><i>Episerver Academy - Episerver Ha Noi</i></p>
+                                    <p>Jan 2020 - Oct 2020</p>
                                 </div>
                             </div>
                         </li>
@@ -95,7 +103,7 @@
                                 <i class="fas fa-phone"></i>
                             </div>
                             <div class="content">
-                                <p class="subtitle">0353999898</p>
+                                <p class="subtitle">+84 353999898</p>
                             </div>
                         </li>
                         <li class="item">
@@ -103,7 +111,7 @@
                                 <i class="fas fa-envelope"></i>
                             </div>
                             <div class="content">
-                                <p class="subtitle">quocanhnguyen507@gmail.com</p>
+                                <a class="subtitle" href="mailto:quocanhnguyen507@gmail.com">quocanhnguyen507@gmail.com</a>  
                             </div>
                         </li>
                         <li class="item">
@@ -111,7 +119,7 @@
                                 <i class="fa-brands fa-linkedin"></i>
                             </div>
                             <div class="content">
-                                <a class="subtitle" href="https://www.linkedin.com/in/quoc-anh-nguyen-718862172/">quoc-anh-nguyen-718862172</a>
+                                <a class="subtitle" href="https://www.linkedin.com/in/quoc-anh-nguyen-718862172/" target="_blank">quoc-anh-nguyen-718862172</a>
                             </div>
                         </li>
                         <li class="item">
@@ -119,7 +127,7 @@
                                 <i class="fa-brands fa-github"></i>
                             </div>
                             <div class="content">
-                                <a class="subtitle" href="https://github.com/quocanhnguyen402">quocanhnguyen402</a>
+                                <a class="subtitle" href="https://github.com/quocanhnguyen402" target="_blank">quocanhnguyen402</a>
                             </div>
                         </li>
                     </ul>
@@ -128,29 +136,30 @@
                     <div class="button">Skills</div>
                     <h3>Progamming Languages</h3><br>
                     <ul>
-                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;C#</li>
-                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Javascript</li>
-                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Java</li>
-                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Php</li>
-                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Python</li>
+                        <li><i class="fa-solid fa-caret-right"></i></i>&nbsp;C#</li>
+                        <li><i class="fa-solid fa-caret-right"></i></i>&nbsp;Javascript</li>
+                        <li><i class="fa-solid fa-caret-right"></i></i>&nbsp;Java</li>
+                        <li><i class="fa-solid fa-caret-right"></i></i>&nbsp;Php</li>
+                        <li><i class="fa-solid fa-caret-right"></i></i>&nbsp;Python</li>
                     </ul>
                     <br>
                     <h3>Frameworks & Technologies</h3><br>
                     <ul>
-                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;.Net MVC</li>
-                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Yii2</li>
-                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Laravel</li>
-                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Optimizely</li>
-                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;MySQL and SQL Server</li>
-                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Linux</li>
+                        <li><i class="fa-solid fa-caret-right"></i></i>&nbsp;.Net MVC Framework</li>
+                        <li><i class="fa-solid fa-caret-right"></i></i>&nbsp;Yii2 Framework</li>
+                        <li><i class="fa-solid fa-caret-right"></i></i>&nbsp;Laravel Framework</li>
+                        <li><i class="fa-solid fa-caret-right"></i></i>&nbsp;Optimizely Framework</li>
+                        <li><i class="fa-solid fa-caret-right"></i></i>&nbsp;MySQL and SQL Server</li>
+                        <li><i class="fa-solid fa-caret-right"></i></i>&nbsp;Linux</li>
+                        <li><i class="fa-solid fa-caret-right"></i></i>&nbsp;Git and Github</li>
                     </ul>
                     <br>
                     <h3>Soft Skils</h3><br>
                     <ul>
-                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Fluent in English</li>
-                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Communication</li>
-                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Teamwork</li>
-                        <li><i class="fa-solid fa-caret-right"></i>&nbsp;Adaptability</li>
+                        <li><i class="fa-solid fa-caret-right"></i></i>&nbsp;Fluent in English</li>
+                        <li><i class="fa-solid fa-caret-right"></i></i>&nbsp;Communication</li>
+                        <li><i class="fa-solid fa-caret-right"></i></i>&nbsp;Teamwork</li>
+                        <li><i class="fa-solid fa-caret-right"></i></i>&nbsp;Adaptability</li>
                     </ul>
                 </div>
             </div>
