--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                                     <p class="sub_title"><i>Full-time, Optimizely Vietnam, Ha Noi</i></p>
                                     <span class="timeline">Nov 2021 - Present</span>
                                 </div>
+                                <p class="content">- Develop various addons of Optimizely framework.</p>
                                 <p class="content">- Convert various projects from dotnet framework to netcore.</p>
-                                <p class="content">- Convert admins view from ASPX to React.</p>
-                                <p class="content">- Maintain and develop various addons of Optimizely framework.</p>
+                                <p class="content">- Convert view pages from ASPX to React.</p>
                             </div>
                         </li>
                         <li>
@@ -44,8 +44,8 @@
                                     <p class="sub_title"><i>Full-time, Episerver Vietnam, Ha Noi</i></p>
                                     <span class="timeline">Jan 2021 - Oct 2021</span>
                                 </div>
+                                <p class="content">- Develop an Episerver framework sample site.</p>
                                 <p class="content">- Convert various projects from dotnet framework to netcore.</p>
-                                <p class="content">- Maintain and develop an Episerver framework sample site for Sales team.</p>
                             </div>
                         </li>
                         <li>
@@ -55,8 +55,7 @@
                                     <p class="sub_title"><i>Part-time, House3d Vietnam, Ha Noi</i></p>
                                     <span class="timeline">Apr 2018 - Jan 2020</span>
                                 </div>
-                                <p class="content">- Maintain and develop various yii2 projects.</p>
-                                <p class="content">- Write import/export products' info from/into excel and migration scripts.</p>
+                                <p class="content">- Develop various yii2 projects.</p>
                             </div>
                         </li>
                     </ul>
